package myBank;

public enum Status {

    CHILD, REGULAR, VIP;
}
